about page changes

--- a/about/index.html
+++ b/about/index.html
@@ -31,9 +31,18 @@
 </section> -->
 
 
+<section id="hero">
+    <div class="image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639155681/Mask_Group_nvpbna.png" alt="Hero Image">
+    </div>
+    <div class="content">
+        <h2>Hi, I'm Karan, and I've been working with digital products for the past 10 years.</h2>
+    </div>
+</section>
+<!-- 
 <section id="creative-coding" class="container-small">
     <h2>Hi, I'm Karan, and I've been working with digital products for the past 10 years.</h2>
-</section>
+</section> -->
 
 <div class="container-small">
     <div class="para">
@@ -87,8 +96,9 @@
     <div class="para">
         <h3>Co Founder at One Square Pixel</h3>
         <p>May 2012 - Nov 2014 · 2 yr 7 mos</p>
-        <p>As a solo freelancer, delivered end-to-end web solutions for clients - Ranging from Process Optimisation Business Tools to Event Management Websites. Later hired and managed a team of four developers. </p>
+        <p>As a freelancer, I delivered end-to-end web solutions for clients - Ranging from Process Optimisation Business Tools to Event Management Websites. Later hired and managed a team of four developers. </p>
         <p>My role here included responsibilities of sales, scope and ideation, conceptualisation and design of the user interface, front-end and backend development. Worked with NH7 (now Insider.in), Phantom Films, Tata LitLive Festival, Gibson Guitars India. </p>
+        <p>I hired three developers to help with projects and brought in a co-founder with expertise in tech.</p>
     </div>
 
     <h2>One thing that has always remained at the heart of this journey has been creating engaging and delightful digital experiences for users.</h2>
