added gif and completed home page

--- a/building-goqii-india-health-quiz/index.html
+++ b/building-goqii-india-health-quiz/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <title>Building GOQii India Health Quiz Challenge for +2M users</title>
 </head>
@@ -35,7 +35,7 @@
 </section>
 <section class="content-section">
     <h2>About</h2>
-    <p>Using the popular Live Quiz format to bust health-related myths and make Indians more aware of healthy habits. We wanted to create a 100-day challenge that would be shaped around users playing Live Health Quizzes on the GOQii app. They would earn points by answering questions, and then redeem those points for rewards such as iPhones and GOQii trackers and a grand prize of 5 Lakh rupees.</p>
+    <p>The idea was to use the popular Live Quiz format to bust health-related myths and make Indians more aware of healthy habits. We wanted to create a 100-day challenge that would be shaped around users playing Live Health Quizzes on the GOQii app. They would earn points by answering questions, and then redeem those points for rewards such as iPhones and GOQii trackers and a grand prize of 5 Lakh rupees.</p>
     <h2>Objectives</h2>
     <ul>
         <li>Spread awareness about good health practices</li>
@@ -115,13 +115,13 @@
         <div class="social">
             <ul>
                 <li><a href="instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt=""></a></li>
-                <li><a href="linkedin.com/in/karanmhatre/"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
-                <li><a href="https://github.com/karanmhatre1"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
-                <li><a href="https://karanmhatre.medium.com/"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
+                <li><a href="linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
             </ul>
         </div>
         <p id="credit">
-            This website was built with love by me using the Eleventy Framework.
+            This website was built with ❤️ by me using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
         </p>
     </footer>
 </body>
