--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <title>Karan Mhatre - Product Designer, Berlin</title>
 </head>
@@ -26,48 +26,54 @@
         
 <section id="hero">
     <div class="content">
-        <h2>I help companies build robust digital product design systems, with an emphasis on UX research.</h2>
-        <p>I’m a Berlin-based Product Designer with 9 years of experience, currently working as a Lead Product Designer at WhiteHatJR (Now part of Byju’s, India’s Largest EduTech Startup).</p>
+        <h2>I help companies design robust digital products, with an emphasis on good UX Design.</h2>
+        <p>I&#39;m a Berlin-based Product Designer with 9 years of experience, currently working as a Lead Product Designer at BYJUS (India&#39;s Largest EduTech Startup).</p>
         <a href="/about">More about me</a>
     </div>
-    <div class="image">
+    <!-- <div class="image">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638201611/hero-image_swszmw.png" alt="Hero Image">
+    </div> -->
+    <div class="image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639489619/ezgif.com-gif-maker_3_gpob9h.gif" alt="Hero Image">
     </div>
 </section>
 <section id="portfolio">
     <div class="project">
         <div class="project-image">
             <a href="/the-new-age-hr-solution/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350209/hr-image_zccu05.png" alt="">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350209/hr-image_zccu05.png" alt="HR Solution Thumbnail">
             </a>
         </div>
         <div class="content">
             <p class="year">2020 - End to end design - Freelancing</p>
             <h3>End-to-end designs for a New-Age HR Solution</h3>
+            <p>I designed a HR Solution from ground-up with 2 co-founders. I was the sole designer on the project.</p>
             <a href="/the-new-age-hr-solution/">Read more</a>
         </div>
     </div>
     <div class="project">
         <div class="project-image">
             <a href="/improved-video-classroom/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350210/vc-image_quv4sg.png" alt="">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350210/vc-image_quv4sg.png" alt="Video Conf Thumbnail">
             </a>
         </div>
         <div class="content">
-            <p class="year">2020 - UX Design - WhiteHatJR</p>
+            <p class="year">2021 - UX Design - WhiteHatJR (Now Byjus)</p>
             <h3>Helping teachers effectively manage more students in a class</h3>
+            <p>Designed and launched a product that helped teachers manage 4-6 students in an online classroom.</p>
             <a href="/improved-video-classroom/">Read more</a>
         </div>
     </div>
     <div class="project">
         <div class="project-image">
             <a href="/gamification-revolution-in-childrens-learning/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350210/gamification-image_aypiry.png" alt="">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350210/gamification-image_aypiry.png" alt="Gamification Thumbnail">
             </a>
         </div>
         <div class="content">
-            <p class="year">2020 - UX Design and Illustrations - WhiteHatJR</p>
+            <p class="year">2021 - UX Design and Illustrations - WhiteHatJR (Now Byjus)</p>
             <h3>Gamification Revolution in Children’s Learning</h3>
+            <p>WhiteHatJR is a platform where children learn how to code. We wanted the children to have fun while learning.</p>
             <a href="/gamification-revolution-in-childrens-learning/">Read more</a>
         </div>
     </div>
@@ -76,24 +82,26 @@
     <div class="project">
         <div class="project-image">
             <a href="/understanding-the-patient-journey/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638366262/practo-image_ueep17.png" alt="">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638366262/practo-image_ueep17.png" alt="Practo Thumbnail">
             </a>
         </div>
         <div class="content">
-            <p class="year">2020 - User Research - Practo</p>
+            <p class="year">2015 - User Research - Practo</p>
             <h3>Understanding and improve Patient behavior when choosing a hospital</h3>
+            <p>In 2015, I conducted user research to build that a product that helps patients find the right hospital to meet their needs.</p>
             <a href="/understanding-the-patient-journey/">Read more</a>
         </div>
     </div>
     <div class="project">
         <div class="project-image">
             <a href="/building-goqii-india-health-quiz/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638351889/Website/goqii-image_pw1ffl.png" alt="">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638351889/Website/goqii-image_pw1ffl.png" alt="GOQii Thumbnail">
             </a>
         </div>
         <div class="content">
-            <p class="year">2018 - Product Management - GOQii</p>
+            <p class="year">2017 - Product Management - GOQii</p>
             <h3>Building GOQii India Health Quiz Challenge for +2M users</h3>
+            <p>The idea was to use the popular Live Quiz format to bust health-related myths and make Indians more aware of healthy habits.</p>
             <a href="/building-goqii-india-health-quiz/">Read more</a>
         </div>
     </div>
@@ -103,13 +111,13 @@
         <div class="social">
             <ul>
                 <li><a href="instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt=""></a></li>
-                <li><a href="linkedin.com/in/karanmhatre/"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
-                <li><a href="https://github.com/karanmhatre1"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
-                <li><a href="https://karanmhatre.medium.com/"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
+                <li><a href="linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
             </ul>
         </div>
         <p id="credit">
-            This website was built with love by me using the Eleventy Framework.
+            This website was built with ❤️ by me using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
         </p>
     </footer>
 </body>
