--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <title>Karan Mhatre - Product Designer, Berlin</title>
 </head>
@@ -15,7 +15,7 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/">Case Studies</a></li>
+                <li><a href="/">Home / Case Studies</a></li>
                 <li><a href="/about">About Me</a></li>
                 <!-- <li><a href="/illustrations">Illustrations</a></li> -->
                 <li><a href="/creative-coding">Creative Coding</a></li>
@@ -34,14 +34,15 @@
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638201611/hero-image_swszmw.png" alt="Hero Image">
     </div> -->
     <div class="image">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639489619/ezgif.com-gif-maker_3_gpob9h.gif" alt="Hero Image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639493972/ezgif.com-gif-maker_4_lnz9fe.gif" alt="Hero Image">
     </div>
 </section>
 <section id="portfolio">
+    <h2>Case Studies</h2>
     <div class="project">
         <div class="project-image">
             <a href="/the-new-age-hr-solution/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350209/hr-image_zccu05.png" alt="HR Solution Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639492415/Frame_8163_bgxcp4.png" alt="HR Solution Thumbnail">
             </a>
         </div>
         <div class="content">
@@ -54,7 +55,7 @@
     <div class="project">
         <div class="project-image">
             <a href="/improved-video-classroom/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638350210/vc-image_quv4sg.png" alt="Video Conf Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639493853/Frame_48095735_ircyfe.png" alt="Video Conf Thumbnail">
             </a>
         </div>
         <div class="content">
