--- a/the-new-age-hr-solution/index.html
+++ b/the-new-age-hr-solution/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <title>The New Age HR Solution</title>
 </head>
@@ -15,7 +15,7 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/">Case Studies</a></li>
+                <li><a href="/">Home / Case Studies</a></li>
                 <li><a href="/about">About Me</a></li>
                 <!-- <li><a href="/illustrations">Illustrations</a></li> -->
                 <li><a href="/creative-coding">Creative Coding</a></li>
