--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@
 
 <section id="hero">
     <div class="image">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639155681/Mask_Group_nvpbna.png" alt="Hero Image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639502172/ezgif.com-gif-maker_5_r79ucr.gif" alt="Hero Image">
     </div>
     <div class="content">
         <h2>Hi, I'm Karan, and I've been working with digital products for the past 10 years.</h2>
