--- a/about/index.html
+++ b/about/index.html
@@ -15,10 +15,10 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/">Home / Case Studies</a></li>
-                <li><a href="/about">About Me</a></li>
+                <li><a href="/" class="">Home / Case Studies</a></li>
+                <li><a href="/about" class="active">About Me</a></li>
                 <!-- <li><a href="/illustrations">Illustrations</a></li> -->
-                <li><a href="/creative-coding">Creative Coding</a></li>
+                <li><a href="/creative-coding"  class="">Creative Coding</a></li>
             </ul>
         </nav>
     </header>
