--- a/creative-coding/index.html
+++ b/creative-coding/index.html
@@ -15,10 +15,10 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/">Home / Case Studies</a></li>
-                <li><a href="/about">About Me</a></li>
+                <li><a href="/" class="">Home / Case Studies</a></li>
+                <li><a href="/about" class="">About Me</a></li>
                 <!-- <li><a href="/illustrations">Illustrations</a></li> -->
-                <li><a href="/creative-coding">Creative Coding</a></li>
+                <li><a href="/creative-coding"  class="active">Creative Coding</a></li>
             </ul>
         </nav>
     </header>
@@ -32,64 +32,64 @@
 <section class="grid-projects">
     <ul>
         <li>
-            <a href="https://genart.karanmhatre.com/binary-sync/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627491545/createwithcode/binary-beats/binary-beats-short_j0q9ez.mov" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/binary-sync/">Audio Reactive - Binary Sync</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/binary-sync/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627491545/createwithcode/binary-beats/binary-beats-short_j0q9ez.mov" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/binary-sync/">Audio Reactive - Binary Sync</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/beats-02/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627901751/createwithcode/beats-02/circle-beats-short_rvxamm.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/beats-02/">Audio Reactive - Beats 2</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/beats-02/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627901751/createwithcode/beats-02/circle-beats-short_rvxamm.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/beats-02/">Audio Reactive - Beats 2</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/character-stretch/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_584/v1627449757/createwithcode/character-stretch/Screen_Recording_2021-07-28_at_10.43.12_AM_r97h1m.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/character-stretch/">Letter Exploration with Leap Motion</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/character-stretch/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_584/v1627449757/createwithcode/character-stretch/Screen_Recording_2021-07-28_at_10.43.12_AM_r97h1m.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/character-stretch/">Letter Exploration with Leap Motion</a></span>
         </li>
         <li>
-            <a href="hhttps://genart.karanmhatre.com/center-split/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628253229/createwithcode/center-split/center-short_icezo4.mp4" muted autoplay loop></video></a>
-            <span><a href="hhttps://genart.karanmhatre.com/center-split/">Audio Reactive - Center Split</a></span>
+            <a target="_blank" href="hhttps://genart.karanmhatre.com/center-split/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628253229/createwithcode/center-split/center-short_icezo4.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="hhttps://genart.karanmhatre.com/center-split/">Audio Reactive - Center Split</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/color-beats/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627453831/createwithcode/color%20beat/color-beats_xkdf42.mov" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/color-beats/">Beats Generator</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/color-beats/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627453831/createwithcode/color%20beat/color-beats_xkdf42.mov" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/color-beats/">Beats Generator</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/paper-fold/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_584/v1628507922/createwithcode/3d-paper-fold/Screen_Recording_2021-08-09_at_1.38.56_PM_m0czj4.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/paper-fold/">Paper Waves</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/paper-fold/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_584/v1628507922/createwithcode/3d-paper-fold/Screen_Recording_2021-08-09_at_1.38.56_PM_m0czj4.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/paper-fold/">Paper Waves</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/organic-threads/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,h_626/v1627395998/createwithcode/flower-3/Screen_Recording_2021-07-27_at_7.33.41_PM_qiiuqq.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/organic-threads/">Organic Threads</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/organic-threads/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,h_626/v1627395998/createwithcode/flower-3/Screen_Recording_2021-07-27_at_7.33.41_PM_qiiuqq.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/organic-threads/">Organic Threads</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/machina/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628605570/createwithcode/machina/Screen_Recording_2021-08-09_at_5.29.20_PM_tla74n.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/machina/">Machina</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/machina/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628605570/createwithcode/machina/Screen_Recording_2021-08-09_at_5.29.20_PM_tla74n.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/machina/">Machina</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/type-bulge/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_crop,h_720,w_720/v1627902345/createwithcode/type%20bulge/Bulge2_fhgu5n.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/type-bulge/">Type Buldge</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/type-bulge/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_crop,h_720,w_720/v1627902345/createwithcode/type%20bulge/Bulge2_fhgu5n.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/type-bulge/">Type Buldge</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/space-dust/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_519/v1627383096/createwithcode/space-dust/Screen_Recording_2021-07-22_at_4.41.17_PM_ob89le.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/space-dust/">Space Dust</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/space-dust/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_519/v1627383096/createwithcode/space-dust/Screen_Recording_2021-07-22_at_4.41.17_PM_ob89le.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/space-dust/">Space Dust</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/type-pull/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628061895/createwithcode/guten-morgen-type-pull/type-stretch02_gddelg.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/type-pull/">Type Glitch</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/type-pull/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628061895/createwithcode/guten-morgen-type-pull/type-stretch02_gddelg.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/type-pull/">Type Glitch</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/sphere-gradient/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,h_1023/v1628252159/createwithcode/sphere-gradient/Screen_Recording_2021-08-06_at_5.44.59_PM_tdps6b.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/sphere-gradient/">Planet Fader</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/sphere-gradient/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,h_1023/v1628252159/createwithcode/sphere-gradient/Screen_Recording_2021-08-06_at_5.44.59_PM_tdps6b.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/sphere-gradient/">Planet Fader</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/circle-3d-waves/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_719/v1628260284/createwithcode/circle-3d-waves/Screen_Recording_2021-08-06_at_5.30.21_PM_csvcci.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/circle-3d-waves/">Spring</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/circle-3d-waves/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_719/v1628260284/createwithcode/circle-3d-waves/Screen_Recording_2021-08-06_at_5.30.21_PM_csvcci.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/circle-3d-waves/">Spring</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/square-cards/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_996/v1628344261/createwithcode/square-cards/Screen_Recording_2021-08-07_at_7.03.48_PM_fw6qae.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/square-cards/">Warping</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/square-cards/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_996/v1628344261/createwithcode/square-cards/Screen_Recording_2021-08-07_at_7.03.48_PM_fw6qae.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/square-cards/">Warping</a></span>
         </li>
         <li>
-            <a href="https://genart.karanmhatre.com/matter/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1629464125/createwithcode/matter/Screen_Recording_2021-08-16_at_5.02.10_PM_mp6xyk.mp4" muted autoplay loop></video></a>
-            <span><a href="https://genart.karanmhatre.com/matter/">Matter</a></span>
+            <a target="_blank" href="https://genart.karanmhatre.com/matter/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1629464125/createwithcode/matter/Screen_Recording_2021-08-16_at_5.02.10_PM_mp6xyk.mp4" muted autoplay loop></video></a>
+            <span><a target="_blank" href="https://genart.karanmhatre.com/matter/">Matter</a></span>
         </li>
         
     </ul>
