--- a/gamification-revolution-in-childrens-learning/index.html
+++ b/gamification-revolution-in-childrens-learning/index.html
@@ -36,7 +36,7 @@
 <section class="content-section">
 
     <h2>The Project and My Role</h2>
-    <p>WhiteHatJR is a platform where children learn how to code. We wanted the children to have fun while learning. </p>
+    <p>WhiteHatJR is a platform where children learn how to code. We wanted the children to have fun while learning and enjoy the process. </p>
     <p>The objective was to improve class completion rates, renewal rates, and project completion rates using gamification.</p>
     <p>There were three aspects to this,</p>
     <ul>
@@ -45,30 +45,31 @@
         <li><b>Leaderboard</b> - Students competed against each other on a weekly leaderboard.</li>
     </ul>
     
-    <p>I was part of a 3 member team, insisting of two product managers, one UX writer, and me as the designer.</p>
+    <p>I was part of a four member team, insisting of two product managers, one UX writer, and me as the designer.</p>
 
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638785182/hr-team_qmdoeq.png" alt="">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639732725/Frame_48095747_wrx6bi.png" alt="">
         <span>The Team</span>
     </div>
     <p>I worked on this project for 3 months from July 2020 to October 2021.</p>
     <p>My role included,</p> 
     <ul>
         <li>Ideation with the Product team</li>
-        <li>User Interviews</li>
+        <li>Conducting User Interviews</li>
         <li>Wireframing and Interface Design</li>
-        <li>Illustration</li>
-        <li>User Testing</li>
+        <li>Illustrations for Badges</li>
         <li>Co-ordinating with Developers to share assets and testing the final product for design suggestions</li>
+        <li>UAT on the final product</li>
     </ul>
 
     <h2>Challenges</h2>
-    <p>We started only with a broad idea on what we wanted to implement. We had to work closely with the product manager to while creating the requirements.</p>
-    <p>Since this is a children's product, we needed to design without our own biases and constantly test it with children to make sure that the visual and language are appealing to them.</p>
+    <p>We started only with a broad idea on what we wanted to achieve. We had to work closely with the product managers to while creating the requirements.</p>
+    <p>Since this is a children's product, we needed to design without our own biases and constantly test it with children to make sure that the visuals and language were appealing to them.</p>
 
     <h2>Research</h2>
     <p>We interviewed our students regarding the games they played and the videos they watched online. We used these insights to draft the terminology and gameplay on our platform.</p>
-    <p>We started by studying the two most popular games among our students,</p>
+    <p>The themes - Science, Space, and Travel ranked highly among the children. Our UX writer used these to come up with names and descriptions for the badges, as well as stages/levels for the leaderboard.</p>
+    <p>We also studied the two most popular games among our students,</p>
     <ul>
         <li>Dota 2</li>
         <li>Clash Royale</li>
@@ -83,20 +84,26 @@
         <span>Clash Royale</span>
     </div>
 
-    <p>The themes - Science, Space, and Travel ranked highly among the children. Our UX writer used these to come up with names and descriptions for the badges, as well as stages/levels for the leaderboard.</p>
-
-
     <h2>The User</h2>
     <p><b>Student</b> - The user is a 6-14 year old student. Their aspirations are to learn coding in an enjoyable way.</p>
     <p>To achieve these aspirations, they need to attend classes, complete their homework assignments on time, and be motivated to use the platform everyday.</p>
     <p>Student's were interested in science, space exploration, and travel</p>
     <p>Student's enjoyed playing games like Clash Royale, Fortnite, and Dota 2.</p>
 
-    <h2>Points</h2>
-    <p>Like any game, we first needed a basic currency unit. For us, it was points. Students get points when they do activities on the platform (such as attend a class, or complete an assignment). We wanted to find a good represention for points, as well as show how many points a student will get for each acitivity and use that as an incentive to get students to complete certain activities.</p>
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639039931/points_v6uvsx.png" alt="">
-        <span>Points Moodboard and Explorations</span>
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639734533/persona_nb2qpg.png" alt="User Persona">
+        <span>One of the User Personas</span>
+    </div>
+
+    <h2>Building Points into the System</h2>
+    <p>Like any game, we first needed a basic currency unit. For us, it was points. Students get points when they do activities on the platform (such as attend a class, or complete an assignment). We wanted to find a good represention for points, as well as show how many points a student will get for each activity and use that as an incentive to get students to complete certain activities.</p>
+    <div class="image-container">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639734860/points_nbt7r1.png" alt="">
+        <span>Points Moodboard</span>
+    </div>
+    <div class="image-container">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639734930/points-variations_y8trtj.png" alt="">
+        <span>Illustration Variations</span>
     </div>
     <div class="image-container">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649223/points-1_aeuhjf.png" alt="">
@@ -107,14 +114,16 @@
         <span>List of ways in which a student can earn points</span>
     </div>
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649224/points-3_dhfocq.png" alt="">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639735291/Frame_48095748_wi9o0e.png" alt="">
         <span>Points at various points on the student dashboard</span>
     </div>
+    <h2>Points Animation</h2>
+    <p>Each time the student won points, we wanted to show how their position on the leaderboard was affected by it. This was a big boost for the kids since they got instant gratification for the activity they completed.</p>
     <div class="image-container">
         <video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1638649346/Project_Submission_rsedci.mp4" controls></video>
         <span>Interaction show celebration of the points earned</span>
     </div>
-    <h2>Badges</h2>
+    <h2>Making Badges</h2>
     <p>Badges helped us promote certain activities. The design challenge with badges was to first understand what type of badges appealed most to children between 6-14 years of age. We created a mood board and tested different themes and illustration styles.</p>
     <p>There were three foundational designs to be created,</p>
     <ul>
@@ -123,54 +132,59 @@
         <li>Promote badges on various activity pages</li>
         <li>Celebrate a student winning a badge</li>
     </ul>
-    <br>
-    <p><b>Illustrating the badges</b></p>
     <p>I created a moodboard of badges we collected from the internet. I then had interview sessions with 10 students to see which styles they liked the most.</p>
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639040128/badges-1_ior6sq.png" alt="">
-        <span>Moodboard and explorations</span>
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737059/badges-1_nyifom.png" alt="Badges Moodboard">
+        <span>Moodboard</span>
     </div>
 
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639039894/badges-2_vedjst.png" alt="">
-        <span>Final Style</span>
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737158/badges-4_jdy6ow.png" alt="Illustrations">
+        <span>Illustrations made on Procreate</span>
     </div>
 
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639039895/badges-3_zgqgsm.png" alt="">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737053/badges-2_cu0hmv.png" alt="">
+        <span>Showing Badge Rarity</span>
+    </div>
+
+    <div class="image-container">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737052/badges-3_q1zx9d.png" alt="">
         <span>Final Badge Collection</span>
     </div>
 
     <br>
-    <p><b>Showcasing badges</b></p>
+    <h2>Showcasing badges</h2>
     <p>Below I’ve shown the three different options we wireframed for badges, and the final one that we went ahead with after testing with some students.</p>
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649600/badges-1_o02uut.png" alt="">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737500/Frame_48095712_v9yfih.png" alt="">
+        <span>Showing how students can earn badges and their progress</span>
     </div>
     <div class="image-container">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649660/badges-2_gpum5i.png" alt="">
+        <span>Modal displaying details of a badge</span>
     </div>
-    <br>
-    <p><b>Nudges of Activity Pages</b></p>
+    <h2>Nudges on the Activity Pages</h2>
+    <p>We needed to make sure the students were contextually made aware of the badges. We wanted to show badge nudges on the page where the student accesses their activities. For example, showing the Quiz Master badge on the quizzes page. </p>
     <p>There were two types of nudges we explored. First is a short nudge, simply indicating how far the student is from the next achievable badge.</p>
     <p>The second option shows the complete set of badges for a specific activity.</p>
     <p>We went ahead with the first option because we didn’t want to overwhelm the students with the full list.</p>
     <div class="image-container">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649742/badges-3_ojzhzl.png" alt="">
+        <span>Nudge Explorations</span>
     </div>
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649743/badges-4_ahdub0.png" alt="">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737929/Frame_48095748_is4f9e.png" alt="">
+        <span>Final nudge on the Quiz Activity Page</span>
     </div>
-    <br>
-    <p><b>Badge Celebration</b></p>
+    <h2>Badge Celebration</h2>
     <p>Celebrations are a key motivator in children’s learning. Getting a badge was one such milestone and we wanted to have a grand celebration for the same.</p>
     <p>I created the animation and picked appropriate sound effects. Discussed the feasibility with developers and got the following animation implemented.</p>    
     <p>Students were thrilled to see this, and even called their parents to show it to them.</p>
     <div class="image-container">
         <video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1638650029/badge-reveal_ecdape.mp4" controls></video>
     </div>
-    <br><br>
-    <p><b>Leaderboard</b></p>
+    <h2>Leaderboard</h2>
     <p>We wanted to launch a leaderboard that gave the student a sense of progression and kept them wanting more even after winning.</p>
     <p>We wanted to create a leveling system, where each week that the student finished in the top 10 of the leaderboard, then the student was moved to a higher league. </p>
     <div class="image-container">
@@ -189,7 +203,17 @@
         <li>Show tasks that the student can complete in order to earn points.</li>
     </ul>
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638650359/leaderboard-2_tth9px.png" alt="">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639738467/Frame_48095715_h5hgpm.png" alt="">
+        <span>Leaderboard Designs</span>
+    </div>
+    <p>I created a quick Code Pen to explain the sticky position interaction on scroll to make sure that the student's own rank is always in view.</p>
+    <div class="embed">
+        <p class="codepen" data-height="572" data-theme-id="light" data-default-tab="html,result" data-slug-hash="wvoKRGr" data-user="karanwhjr" style="height: 572px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/karanwhjr/pen/wvoKRGr">
+            Sticky Element</a> by Karan (<a href="https://codepen.io/karanwhjr">@karanwhjr</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     </div>
     <h2>Impact and Future Scope</h2>
     <p>At first we decided to measure the impact of gamification based on renewal rates and we saw that students that participated regularly in the leaderboard saw a higher renewal rate. But, this could be attributed to causation rather than correlation.</p>
