--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
     </div>
     <div class="project">
         <div class="project-image">
+            <a href="/designing-live-health-and-fitness-classes/">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640117993/play-thumbnail_tbf4ly.png" alt="Video Conf Thumbnail">
+            </a>
+        </div>
+        <div class="content">
+            <p class="year">2018 - UX Design - GOQii</p>
+            <h3>Delivering Live Health and Fitness Classes</h3>
+            <p>Designed and launched a Live Health and Fitness platform on GOQii Play and grew it to over 1M+ users over 1 year.</p>
+            <a href="/designing-live-health-and-fitness-classes/">Read more</a>
+        </div>
+    </div>
+    <div class="project">
+        <div class="project-image">
             <a href="/gamification-revolution-in-childrens-learning/">
                 <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501331/Frame_48095738_dmcokb.png" alt="Gamification Thumbnail">
             </a>
