--- a/the-new-age-hr-solution/index.html
+++ b/the-new-age-hr-solution/index.html
@@ -76,7 +76,10 @@
     <p>The user was a 20-45 year old MNC employee. Their aspirations were to do their job better, get promoted, and be admired by their managers and peers.</p>
     <p>To achieve these aspirations, they needed to understand how to improve, be guided, and to be educated in soft-skills like negotiation, and conflict resolution.</p>
     <p>The user was motivated to do this by their aspirations, peer pressure, and support from their manager.</p>
-
+    <div class="image-container">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639756012/persona_a5jifl.png" alt="User Persona">
+        <span>User Persona</span>
+    </div>
     <h2>Project Kickoff</h2>
     <p>I conducted a virtual 4 hour kick-off sessions with the co-founders, along with a follow-up 1 hour session.</p>
     
@@ -139,12 +142,17 @@
         <span>Overall framework - 3</span>
     </div>
 
-    <p>We went ahead with the third structure because,</p>
+    <p>We went ahead with the third model because,</p>
     <ul>
         <li>I wanted the navigation bar to be open on all pages to promote other features.</li>
         <li>The tasks had to be in the center to attract maximum priority.</li>
         <li>Using a two column layout to manage tasks and helpful information worked well because tasks were short and didn't need the full width.</li>
     </ul>
+
+    <div class="image-container">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639755383/interaction_model_ict1b8.png" alt="">
+        <span>Dashboard Interaction Model</span>
+    </div>
 
     <div class="image-container">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638795733/wf-as_na6yit.png" alt="">
